<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_cart"
        app:layout_constraintBottom_toTopOf="@+id/layoutLogin2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutLogin2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/drawable_login_edittext"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="16dp"
                android:fontFamily="@font/nanum_square_round_bold"
                android:hint="@string/str_login_edit_email"
                android:inputType="textEmailAddress"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColorHint="@color/gray"
                android:textSize="18dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/drawable_login_edittext"
                android:drawableStart="@drawable/icon_password"
                android:drawablePadding="16dp"
                android:fontFamily="@font/nanum_square_round_bold"
                android:hint="@string/str_login_edit_password"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColorHint="@color/gray"
                android:textSize="18dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/nanum_square_round_bold"
            android:text="@string/str_login_switch_autologin"
            android:textSize="14dp"
            android:thumb="@drawable/drawable_login_switch_thumb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            app:switchMinWidth="0dp"
            app:switchPadding="8dp"
            app:thumbTint="@null"
            app:track="@drawable/drawable_login_switch_track"
            app:trackTint="@null" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/drawable_login_button"
            android:fontFamily="@font/nanum_square_round_bold"
            android:stateListAnimator="@null"
            android:text="@string/str_login_btn_login"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <com.google.android.gms.common.SignInButton-->
    <!--        android:id="@+id/buttonGMS"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="64dp"-->
    <!--        android:layout_marginTop="24dp"-->
    <!--        android:layout_marginEnd="64dp"-->
    <!--        app:buttonSize="standard"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/nanum_square_round_bold"
        android:text="@string/str_login_txt_account"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/nanum_square_round_bold"
        android:text="@string/str_login_txt_register"
        android:textColor="@color/colorPrimary"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>